# credits

./: Cargo.toml  Dockerfile  Dockerfile.github  Dockerfile.gitlab  README.md  dockerfile
.cargo/: config.toml
.github/workflows/: ci.yaml
config/: development.yaml  production.yaml  test.yaml
dockerfileconfig/: sources.list
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240221_062832_wallets.rs  m20240221_064740_index_wallet_addr.rs  m20240222_033407_bills.rs  m20240222_033749_transaction_event.rs  m20240222_033749_transaction_events.rs
src/: app.rs  lib.rs
src/controllers/: bill.rs  mod.rs  transaction.rs  wallet.rs
src/initializers/: listen_tran.rs  mod.rs
src/models/: bill.rs  bills.rs  mod.rs  time_util.rs  transaction_event.rs  transaction_event_type.rs  transaction_events.rs  wallet.rs  wallets.rs
src/models/_entities/: bill.rs  bills.rs  mod.rs  prelude.rs  transaction_event.rs  transaction_events.rs  wallet.rs  wallets.rs
src/tasks/: mod.rs  trans_event_process.rs
src/views/: bill.rs  callback.rs  mod.rs  response.rs  transaction.rs  wallets.rs
tests/requests/: bill.rs  mod.rs  transaction.rs  wallet.rs
tests/tasks/: trans_event_process.rs
